--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "def term_output(term, input_value):\n",
-    "    variable = []"
+    "    variable = [(3,2)]"
    ]
   },
   {
