Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,12 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_output(term, input_value):\n",
-    "    variable "
+    "    pass"
    ]
   },
   {
