Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    for variable in variables :\n",
-    "        "
+    "        return "
    ]
   },
   {
