--- a/index.ipynb
+++ b/index.ipynb
@@ -186,9 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def output_at(list_of_terms, x_value):\n",
-    "    for variable in variables :\n",
-    "        return "
+    "def output_at(list_of_terms, x_value):\n"
    ]
   },
   {
